--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
   </head>
 
   <body>
+  <nav>
+  <ul>
+    <li>Home</li>
+    <li>About</li>
+    <li>Contact</li>
+  </ul>
+</nav>
+<footer>
+  &copy; 2015 Bike Berlin
+</footer>
     <%= yield %>
   </body>
 </html>
