--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Welcome to Bike Berlin</h1>
 <h2>Your source for used bikes in Berlin</h2>
 <p>Welcome! The date and time is <%= Time.now %></p>
+<%= image_tag ("racebike.jpg") %>
 <% test_variable = 42 %>
 <%= test_variable %>
