--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,29 +2,33 @@
 <html>
   <head>
     <title>SampleApp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
 
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'default', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'default', 'data-turbolinks-track': 'reload' %>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
-</head>
-  <body>
-  <nav>
-  <ul>
-    <li>Home</li>
-    <li>About</li>
-    <li>Contact</li>
-  </ul>
-</nav>
-  
+  </head>
+
+<body>
+  <div class="nav">
+    <ul class="nav" id="nav">
+       <li><a href="application.html.erb">Home</a></li>
+       <li><a href="contact.html">Contact Me</a></li>
+       <li><a href="about.html">About</a></li>
+      
+    </ul>
+    </div>
+
   <%= yield %>
 
-<footer>
-  &copy; 2015 Bike Berlin
-</footer>
+  <footer>
+    &copy; 2015 Bike Berlin
+  </footer>
   
-  </body>
+</body>
 </html>
