--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,15 @@
-<h1>Contact</h1>
-<p>Magnus Kreisel<br>Europaallee 3<br>65375 Oestrich Winkel </p>
+<div class="contact">
+	<div class="textbody">
+		<h1>Contact us</h1>
+		<h2>Use Mail or Phone:</h2>
+
+		<div class="contactinfo container">
+			<p><span class="glyphicon glyphicon-envelope"><a href="mailto:usedbikeshop@berlin.de"></span>usedbikeshop@berlin.de</a></p>
+			<p><span class="glyphicon glyphicon-phone"></span>03012345</p>
+		</div><!-- end contactinfo -->
+
+		<h3>Just hit us up!!</h3>
+		<p class="adress">Feel free to stop by and check out our store at:</p>
+		<p>Kurfürstendamm 188<br>Berlin 10707<br>Germany</p>
+	</div>
+</div>
