--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>About Us</h1>
-<p>We are a bike store in Berlin</p>
+<div class="textbody about">
+	<div class="abouttext">
+		<h1>About us.</h1>
+		<p>We are the best shop for bikes located right in central Berlin.<br>For more than a decade we have been selling used bikes in Berlin - we hope that many more years are to come!<br>For any inquiries, <a href="contact">contact us</a> or visit our shop!</p>
+		<p>Except for Sundays, we are open daily from 8 am to 8 pm. At the moment, it is <%= Time.now %>.</p>
+	</div>
