--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,7 +7,7 @@
 		<h3>Below, you can find a collection of some of our bikes. Visit our store to find many more and try them out!</h3>
 
 <div class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12"><%= image_tag("/assets/racebike.jpg", class: "img-responsive")%></div>
+			<div class="col-md-4 col-sm-6 col-xs-12"> <%= image_tag("racebike.jpg", class: "img-responsive")%></div>
 			</div>
 		</div>
 	</div>		
